@@ -494,6 +494,10 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 		* Fixed swapped notify-functions, which would cause clients to
 		  be left on the upload-queue ctrl, even if the underlying
 		  object was deleted.
+		* Improved enabling/disabling of items on the right-click menu
+		  on the download queue. Among other things, it is now
+		  possible to stop a paused download, without having to
+		  restart it first (this closes bug #1078).
 
 	xor:
 		* Fix for crash on amuled when starting up kademlia.
